methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:24: error: ')' expected but '}' found.
    }else{
    ^FlowerPot:24: error: ';' expected but 'else' found.
    }else{
     ^FlowerPot:34: error: expected class or object definition
def Marquer(){
^FlowerPot:39: error: expected class or object definition
def FaireMotif(c: Color){
^FlowerPot:59: error: Unmatched closing brace '}' ignored here
}
^